# GreyhoundMessaging

./: .gitignore  LICENCE_NOTICE  LICENSE  README.md  readme.md  requirements.txt  setup.cfg
example_configs/: rabbitmq.yaml  rabbitmq_to_kafka.yaml
src/greyhound_messaging/: greyhound_consumers.py
src/greyhound_messaging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/greyhound_messaging/adapters/: __init__.py  adapter_factory.py
src/greyhound_messaging/adapters/_abstracts/: core_messaging.py
src/greyhound_messaging/adapters/_implementations/: kafka_adapters.py  rabbitmq_adapters.py
src/greyhound_messaging/cli/: cli_consumer.py  main.py
src/greyhound_messaging/config/: __init__.py
src/greyhound_messaging/model/: __init__.py  greyhound_message.py
tests/integration/: test_rabbitmq_consumer_flow.py
tests/unit/adapters/: test_adapter_factory.py  test_kafka_adapters.py  test_rabbitmq_adapters.py
tests/unit/model/: test_greyhound_message.py
