[metadata]
name = greyhound-messaging
version = 0.1.0
description = Internal messaging abstraction
author = James Tesh
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    pika>=1.3.0
    pydantic>=2.0
    confluent-kafka>=2.11.0
    click>=8.2.1
    PyYAML>=6.0.2
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    greyhound = greyhound_messaging.cli.main:consume